--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,6 @@
 <resources>
-    <string name="app_name">CleanArchitectureSample</string>
+    <string name="app_name">CleanArchitecture</string>
+    <string name="app_name_debug">CleanArchitecture Debug</string>
 
     <string name="menu_about_app">About App</string>
 
